修复注解处理器上的问题，并添加注解处理器的降级编译支持功能