@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 sourceSets.main.java.srcDirs = ["src/main/java"]
 sourceSets.test.java.srcDirs = ["src/test/java"]
@@ -18,15 +19,37 @@ publishing {
   }
 }
 
+tasks.withType(JavaCompile){
+  options.encoding = "UTF-8"
+
+  sourceCompatibility = 8
+  targetCompatibility = 8
+
+  options.fork = true
+  options.forkOptions.jvmArgs.addAll([
+          "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+          "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+          "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+          "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+          "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+          "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+  ])
+}
+
+tasks.withType(Jar){
+  archiveFileName = "${project.name}.jar"
+}
+
 dependencies{
   repositories{
     mavenCentral()
     maven{ url 'https://www.jitpack.io' }
   }
 
-  compileOnly files("libs/tools.jar")
+  //compileOnly files("libs/tools.jar")
   compileOnly 'com.google.auto.service:auto-service:1.0.1'
 
   annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
-  annotationProcessor "com.github.Anuken:jabel:0.7.0"
 }
+sourceCompatibility = JavaVersion.VERSION_1_9
+targetCompatibility = JavaVersion.VERSION_1_9
